# mars-explorer

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md  catmullrom.h  catmullrom3.h  main.cpp  model_obj.h  object.h  shader.h
res/: cartoon.fs  cartoon.vs  frag.shader  mainShader.shader  vert.shader
rover/: rover.mtl  rover14arm.mtl  rover15body.mtl  roverArm.mtl  roverBody.mtl
skysphere/: SkyboxBackdrop3.mtl
spirit/: spirit.mtl
